--- a/IndraKumarSharma_JS3_Lab-main/IndraKumarSharma_JS3_Lab-main/IndraKumarSharma_JS3_Lab-main/package.json
+++ b/IndraKumarSharma_JS3_Lab-main/IndraKumarSharma_JS3_Lab-main/IndraKumarSharma_JS3_Lab-main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anujoydhar_js3_lab-main",
+  "name": "indrakumarsharma_js3_lab-main",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
